--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
     <meta name="author" content="Lovable" />
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/favicon.ico" />
+    <link rel="icon" type="image/png" href="favicon.ico" />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:title" content="Kannada Milana Sathi Connect - Public Matrimony" />
     <meta property="og:description" content="Find your life partner on our secure, fast and beautiful matrimony platform." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    <meta property="og:url" content="https://your-domain.com" />
+    <meta property="og:url" content="https://javeedshaik8.github.io/kannada-milana-sathi-connect-main/" />
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image" />
@@ -31,6 +31,6 @@
 
   <body class="antialiased bg-white text-gray-900">
     <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
+    <!-- ✅ DO NOT add <script src="/src/main.tsx"> — Vite handles this on build -->
   </body>
 </html>
